--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,13 +1,57 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>frontend</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Biotech Store Management</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive.css">
+    <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
+</head>
+<body>
+    <header>
+        <div class="container">
+            <div class="header-content">
+                <div class="logo">
+                    <i class="fas fa-flask"></i>
+                    <h1>Biotech <span>Store</span> Management</h1>
+                </div>
+                <div class="user-info">
+                    <div class="user-role" id="userRole">Storekeeper</div>
+                    <div id="userName">Dr. Arjun Sharma</div>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <main class="container">
+        <div class="tabs">
+            <div class="tab active" data-target="dashboard-panel">Dashboard</div>
+            <div class="tab" data-target="inventory-panel">Inventory</div>
+            <div class="tab" data-target="requests-panel">Material Requests</div>
+            <div class="tab" data-target="transactions-panel">Transaction History</div>
+        </div>
+
+        <!-- Panels will be loaded dynamically via JavaScript -->
+        <div id="panels-container"></div>
+    </main>
+
+    <!-- Modals will be loaded dynamically via JavaScript -->
+    <div id="modals-container"></div>
+
+    <footer>
+        <div class="container">
+            <p>Biotech Department Store Management System &copy; 2025 | "No more prehistoric store management!"</p>
+        </div>
+    </footer>
+
+    <!-- JavaScript Files -->
+    <script src="js/data.js"></script>
+    <script src="js/ui.js"></script>
+    <script src="js/inventory.js"></script>
+    <script src="js/requests.js"></script>
+    <script src="js/transactions.js"></script>
+    <script src="js/app.js"></script>
+</body>
 </html>
